--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Russia-travel</title>
+    <link href="./styles/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="page">
-        <div class="p">
-            <h1>forest</h1>
-            <h2>NOT UNDERSTANDING!!!</h2>
-        </div>
+        <header class="header">
+            <img class="header__logo" src="./sprint-3-images/header-logo.svg" alt="map-of-russia">
+        </header>
+        <main class="content">
+            <section class="lead">
+
+            </section>
+        </main>
     </div>
-    
 </body>
 </html>
