--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Russia-travel</title>
-    <link href="./styles/index.css" type="text/css" rel="stylesheet">
+    <link href="./pages/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="page">
         <header class="header">
             <img class="header__logo" src="./sprint-3-images/header-logo.svg" alt="map-of-russia">
+            <div class="header__lang-links">
+                <a class="header__lang-link header__lang-link_active" href ="#">Ru</a>
+                <a class="header__lang-link" href="#">En</a>
+            </div>
         </header>
         <main class="content">
             <section class="lead">
-
+                <h1 class="lead__title">Путешествия по России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <figure class="lead__picture">
+                    <img class="lead__image" src="./sprint-3-images/lead-polka.jpg" alt="Маршрут">
+                    <figcaption class="lead__caption">ваша полка&#8209верхняя</figcaption>
+                </figure>
             </section>
         </main>
     </div>
