the forth block

--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
                     </li>
                 </ul>
             </section>
+            <section class="photo-grid">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-train.jpg" alt="Поезд">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="Cнежные горы">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-tuman.jpg" alt="Собака в тумане">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-sochi.jpg" alt="Сочи">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-arisa.jpg" alt="Машина на льду">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-baikal.jpg" alt="Пляж Байкала">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-elbrus.jpg" alt="Эльбрус">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="Дорожный знак">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="Камчатка">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="Байкал">
+                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-ergaki.jpg" alt="Ергаки">
+            </section>
         </main>
     </div>
 </body>
