--- a/index.html
+++ b/index.html
@@ -140,6 +140,26 @@
                 </a>
             </section>
         </main>
+        <footer class="footer">
+            <ul class="footer__list">
+                    <li>
+                        <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+                    </li>
+                    <li>
+                        <a class="footer__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">Погода</a>
+                    </li>
+                    <li>
+                        <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+                    </li>
+                    <li>
+                        <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+                    </li>
+                    <li>
+                        <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+                    </li>
+            </ul>
+            <h3 class="footer__copyright">© 2022. Казбанов Никита</h3>
+        </footer>
     </div>
 </body>
 </html>
