--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <h3 class="place__url-heading">URL</h3>
                         <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
                     </div>
-                    <img class="place__image" src="./sprint-3-images/place-kosa.jpg" alt="">
+                    <img class="place__image" src="./sprint-3-images/place-kosa.jpg" alt="Куршская коса">
                         <div>
                             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны 
                                 и подёрнутого рябью волн Балтийского моря 
@@ -84,7 +84,7 @@
                         <h3 class="place__url-heading">URL</h3>
                         <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
                     </div>
-                    <img class="place__image" src="./sprint-3-images/place-kolsky.jpg" alt="">
+                    <img class="place__image" src="./sprint-3-images/place-kolsky.jpg" alt="полуостров Кольский">
                         <div>
                             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                                 тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -98,7 +98,7 @@
                         <h3 class="place__url-heading">URL</h3>
                         <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                     </div>
-                    <img class="place__image" src="./sprint-3-images/place-altai.jpg" alt="">
+                    <img class="place__image" src="./sprint-3-images/place-altai.jpg" alt="Алтай">
                         <div>
                             <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
                                 В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -111,7 +111,7 @@
                         <h3 class="place__url-heading">URL</h3>
                         <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                     </div>
-                    <img class="place__image" src="./sprint-3-images/place-winter-baikal.jpg" alt="">
+                    <img class="place__image" src="./sprint-3-images/place-winter-baikal.jpg" alt="Байкал">
                         <div>
                             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
                                 в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -125,7 +125,7 @@
                         <h3 class="place__url-heading">URL</h3>
                         <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru</a>
                     </div>
-                    <img class="place__image" src="./sprint-3-images/place-karelia.jpg" alt="">
+                    <img class="place__image" src="./sprint-3-images/place-karelia.jpg" alt="Карелия">
                         <div>
                             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
                                 В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
