--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +22,7 @@
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <figure class="lead__picture">
                     <img class="lead__image" src="./sprint-3-images/lead-polka.jpg" alt="Маршрут">
-                    <figcaption class="lead__caption">ваша полка&#8209верхняя</figcaption>
+                    <figcaption class="lead__caption">ваша полка&#8209;верхняя</figcaption>
                 </figure>
             </section>
             <section class="intro">
