--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="./sprint-3-images/header-logo.svg" alt="map-of-russia">
+            <img class="header__logo" src="./sprint-3-images/header-logo.svg" alt="карта России">
             <div class="header__lang-links">
                 <a class="header__lang-link header__lang-link_active" href ="#">Ru</a>
                 <a class="header__lang-link" href="#">En</a>
