--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
                     <li>
-                        <p class="intro__list_data">Часовых поясов <span class="intro__list_data_number">11</span></p>
+                        <p class="intro__list-data">Часовых поясов <span class="intro__list-data-number">11</span></p>
                     </li>
                     <li>
-                        <p class="intro__list_data">Объектов природного наследия ЮНЕСКО <span class="intro__list_data_number">12</span></p>
+                        <p class="intro__list-data">Объектов природного наследия ЮНЕСКО <span class="intro__list-data-number">12</span></p>
                     </li>
                     <li>
-                        <p class="intro__list_data">Объектов культурного наследия ЮНЕСКО <span class="intro__list_data_number">16</span></p>
+                        <p class="intro__list-data">Объектов культурного наследия ЮНЕСКО <span class="intro__list-data-number">16</span></p>
                     </li>
                     <li>
-                        <p class="intro__list_data">Природных заповедников <span class="intro__list_data_number">105</span></p>
+                        <p class="intro__list-data">Природных заповедников <span class="intro__list-data-number">105</span></p>
                     </li>
                     <li>
-                        <p class="intro__list_data">Аэропортов <span class="intro__list_data_number">241</span></p>
+                        <p class="intro__list-data">Аэропортов <span class="intro__list-data-number">241</span></p>
                     </li>
                 </ul>
             </section>
