--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 и подёрнутого рябью волн Балтийского моря 
                 с другой. Уникальная природная зона на краю российского анклава.
               </p>
-              <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника 
+              <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника 
                 и исследователя там же по соседству — самая западная точка России, Балтийская коса, — 
                 и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы 
                 и запах стального, прохладного моря.
@@ -90,7 +90,7 @@
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
               <h3 class="place__url-heading">url</h3>
-              <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+              <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
             </div>
             <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
             <div>
@@ -109,10 +109,9 @@
             <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Байкал">
             <div>
               <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
-                в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+                в мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из красивейших мест в России.
               </p>
-              <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
-                к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+              <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале&nbsp;«Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
               </p>
             </div>
           </article>
