--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Russia-travel</title>
     <link href="./pages/index.css" type="text/css" rel="stylesheet">
   </head>
-  <body>
+  <body class="main-page">
     <div class="page">
       <header class="header">
         <img class="header__logo" src="./images/header-logo.svg" alt="карта России">
